// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders all tab panels when renderAllTabPanels is true 1`] = `
<div>
  <div
    class="bp3-tabs main horizontal"
  >
    <div
      class="bp3-tab-list"
      role="tablist"
    >
      <div
        class="bp3-tab-indicator-wrapper"
        style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
      >
        <div
          class="bp3-tab-indicator"
        />
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab1"
        aria-disabled="false"
        aria-expanded="true"
        aria-selected="true"
        class="bp3-tab"
        data-tab-id="tab1"
        id="bp3-tab-title_test-tabs_tab1"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab2"
        aria-disabled="false"
        aria-expanded="false"
        aria-selected="false"
        class="bp3-tab"
        data-tab-id="tab2"
        id="bp3-tab-title_test-tabs_tab2"
        role="tab"
        tabindex="0"
      >
        Tab 2
      </div>
    </div>
    <div
      aria-hidden="false"
      aria-labelledby="bp3-tab-title_test-tabs_tab1"
      class="bp3-tab-panel"
      id="bp3-tab-panel_test-tabs_tab1"
      role="tabpanel"
    >
      <div>
        Panel 1
      </div>
    </div>
    <div
      aria-hidden="true"
      aria-labelledby="bp3-tab-title_test-tabs_tab2"
      class="bp3-tab-panel"
      id="bp3-tab-panel_test-tabs_tab2"
      role="tabpanel"
    >
      <div>
        Panel 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders tabs with children 1`] = `
<div>
  <div
    class="bp3-tabs main horizontal"
  >
    <div
      class="bp3-tab-list"
      role="tablist"
    >
      <div
        class="bp3-tab-indicator-wrapper"
        style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
      >
        <div
          class="bp3-tab-indicator"
        />
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab1"
        aria-disabled="false"
        aria-expanded="true"
        aria-selected="true"
        class="bp3-tab"
        data-tab-id="tab1"
        id="bp3-tab-title_test-tabs_tab1"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab2"
        aria-disabled="false"
        aria-expanded="false"
        aria-selected="false"
        class="bp3-tab"
        data-tab-id="tab2"
        id="bp3-tab-title_test-tabs_tab2"
        role="tab"
        tabindex="0"
      >
        Tab 2
      </div>
    </div>
    <div
      aria-hidden="false"
      aria-labelledby="bp3-tab-title_test-tabs_tab1"
      class="bp3-tab-panel"
      id="bp3-tab-panel_test-tabs_tab1"
      role="tabpanel"
    >
      <div>
        Panel 1
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders tabs with icons 1`] = `
<div>
  <div
    class="bp3-tabs main horizontal icons"
  >
    <div
      class="bp3-tab-list"
      role="tablist"
    >
      <div
        class="bp3-tab-indicator-wrapper"
        style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
      >
        <div
          class="bp3-tab-indicator"
        />
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab1"
        aria-disabled="false"
        aria-expanded="true"
        aria-selected="true"
        class="bp3-tab"
        data-tab-id="tab1"
        id="bp3-tab-title_test-tabs_tab1"
        role="tab"
        tabindex="0"
      >
        <span>
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-small"
            data-icon="main-dashboard"
          >
            <svg
              height="16"
              viewBox="0 0 14 14"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.4 3.5c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm-.9 2.6c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zM7 4.4c.5 0 .9-.4.9-.9s-.4-.9-.9-.9-.9.4-.9.9.4.9.9.9zM5.2 9.6c0 1 .8 1.8 1.8 1.8s1.8-.8 1.8-1.8C8.8 9.2 7 5.2 7 5.2s-1.8 4-1.8 4.4zM7 0C3.1 0 0 3.1 0 7s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 12.2c-2.9 0-5.2-2.4-5.2-5.2S4.1 1.8 7 1.8s5.2 2.4 5.2 5.2-2.3 5.2-5.2 5.2zm3.5-7.8c0-.5-.4-.9-.9-.9s-.8.4-.8.9.4.9.9.9.8-.4.8-.9zm0 1.7c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9z"
                fill="#4d5969"
              />
            </svg>
          </span>
          Tab 1
        </span>
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab2"
        aria-disabled="false"
        aria-expanded="false"
        aria-selected="false"
        class="bp3-tab"
        data-tab-id="tab2"
        id="bp3-tab-title_test-tabs_tab2"
        role="tab"
        tabindex="0"
      >
        <span>
          <span
            class="bp3-icon bp3-icon-settings StyledProps--main StyledProps--padding-right-small"
            icon="settings"
          >
            <svg
              data-icon="settings"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                settings
              </desc>
              <path
                d="M3 1c0-.55-.45-1-1-1S1 .45 1 1v3h2V1zm0 4H1c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm12-4c0-.55-.45-1-1-1s-1 .45-1 1v2h2V1zM9 1c0-.55-.45-1-1-1S7 .45 7 1v6h2V1zM1 15c0 .55.45 1 1 1s1-.45 1-1v-5H1v5zM15 4h-2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-2 11c0 .55.45 1 1 1s1-.45 1-1V9h-2v6zM9 8H7c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-2 7c0 .55.45 1 1 1s1-.45 1-1v-2H7v2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Tab 2
        </span>
      </div>
    </div>
    <div
      aria-hidden="false"
      aria-labelledby="bp3-tab-title_test-tabs_tab1"
      class="bp3-tab-panel"
      id="bp3-tab-panel_test-tabs_tab1"
      role="tabpanel"
    >
      <div>
        Panel 1
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders tabs with tabList prop 1`] = `
<div>
  <div
    class="bp3-tabs main horizontal"
  >
    <div
      class="bp3-tab-list"
      role="tablist"
    >
      <div
        class="bp3-tab-indicator-wrapper"
        style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
      >
        <div
          class="bp3-tab-indicator"
        />
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab1"
        aria-disabled="false"
        aria-expanded="true"
        aria-selected="true"
        class="bp3-tab"
        data-tab-id="tab1"
        id="bp3-tab-title_test-tabs_tab1"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab2"
        aria-disabled="false"
        aria-expanded="false"
        aria-selected="false"
        class="bp3-tab"
        data-tab-id="tab2"
        id="bp3-tab-title_test-tabs_tab2"
        role="tab"
        tabindex="0"
      >
        Tab 2
      </div>
    </div>
    <div
      aria-hidden="false"
      aria-labelledby="bp3-tab-title_test-tabs_tab1"
      class="bp3-tab-panel"
      id="bp3-tab-panel_test-tabs_tab1"
      role="tabpanel"
    >
      <div>
        Panel 1
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders vertical tabs 1`] = `
<div>
  <div
    class="bp3-tabs bp3-vertical main vertical"
  >
    <div
      class="bp3-tab-list"
      role="tablist"
    >
      <div
        class="bp3-tab-indicator-wrapper"
        style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
      >
        <div
          class="bp3-tab-indicator"
        />
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab1"
        aria-disabled="false"
        aria-expanded="true"
        aria-selected="true"
        class="bp3-tab"
        data-tab-id="tab1"
        id="bp3-tab-title_test-tabs_tab1"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </div>
      <div
        aria-controls="bp3-tab-panel_test-tabs_tab2"
        aria-disabled="false"
        aria-expanded="false"
        aria-selected="false"
        class="bp3-tab"
        data-tab-id="tab2"
        id="bp3-tab-title_test-tabs_tab2"
        role="tab"
        tabindex="0"
      >
        Tab 2
      </div>
    </div>
    <div
      aria-hidden="false"
      aria-labelledby="bp3-tab-title_test-tabs_tab1"
      class="bp3-tab-panel"
      id="bp3-tab-panel_test-tabs_tab1"
      role="tabpanel"
    >
      <div>
        Panel 1
      </div>
    </div>
  </div>
</div>
`;
